FogBugz #143478: drivers/misc: Move sysid from arch to drivers
Add sysid driver.
Usage:
  cat /sys/bus/platform/devices/[addr.sysid]/sysid/id
  cat /sys/bus/platform/devices/[addr.sysid]/sysid/timestamp

v2:
- Updated license header
- Removed ID and timestamp from documentation

v3:
- Removed ID and timestamp from optional properties in documentation

Signed-off-by: Ley Foon Tan <lftan@altera.com>

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -766,6 +766,17 @@ config PANEL_BOOT_MESSAGE
 	  An empty message will only clear the display at driver init time. Any other
 	  printf()-formatted message is valid with newline and escape codes.
 
+config ALTERA_HWMUTEX
+	tristate "Altera Hardware Mutex"
+	help
+	  This option enables device driver support for Altera Hardware Mutex.
+	  Say Y here if you want to use the Altera hardware mutex support.
+
+config ALTERA_SYSID
+	tristate "Altera System ID"
+	help
+	This enables Altera System ID soft core driver.
+
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
