FogBugz #468942-1: Add have-hw-ecc-fixup into nand nodes in dts
At some point, the parameter for hardware ecc fixup was dropped from
the device tree.  This patch adds it back.

Signed-off-by: Graham Moore <graham.moore@linux.intel.com>

--- a/arch/arm/boot/dts/socfpga_arria10.dtsi
+++ b/arch/arm/boot/dts/socfpga_arria10.dtsi
@@ -642,6 +642,7 @@
 			interrupts = <0 99 4>;
 			dma-mask = <0xffffffff>;
 			clocks = <&nand_clk>;
+			have-hw-ecc-fixup;
 			status = "disabled";
 		};
 
