--- a/arch/arm/boot/dts/socfpga.dtsi
+++ b/arch/arm/boot/dts/socfpga.dtsi
@@ -738,6 +738,7 @@
 			interrupts = <0x0 0x90 0x4>;
 			dma-mask = <0xffffffff>;
 			clocks = <&nand_clk>;
+			have-hw-ecc-fixup;
 			status = "disabled";
 		};
 
