--- a/arch/arm64/boot/dts/altera/socfpga_stratix10.dtsi
+++ b/arch/arm64/boot/dts/altera/socfpga_stratix10.dtsi
@@ -621,6 +621,7 @@
 			compatible = "snps,designware-i2c";
 			reg = <0xffc02800 0x100>;
 			interrupts = <0 103 4>;
+			clocks = <&l4_sp_clk>;
 			status = "disabled";
 		};
 
@@ -630,6 +631,7 @@
 			compatible = "snps,designware-i2c";
 			reg = <0xffc02900 0x100>;
 			interrupts = <0 104 4>;
+			clocks = <&l4_sp_clk>;
 			status = "disabled";
 		};
 
@@ -639,6 +641,7 @@
 			compatible = "snps,designware-i2c";
 			reg = <0xffc02a00 0x100>;
 			interrupts = <0 105 4>;
+			clocks = <&l4_sp_clk>;
 			status = "disabled";
 		};
 
@@ -648,6 +651,7 @@
 			compatible = "snps,designware-i2c";
 			reg = <0xffc02b00 0x100>;
 			interrupts = <0 106 4>;
+			clocks = <&l4_sp_clk>;
 			status = "disabled";
 		};
 
@@ -657,6 +661,7 @@
 			compatible = "snps,designware-i2c";
 			reg = <0xffc02c00 0x100>;
 			interrupts = <0 107 4>;
+			clocks = <&l4_sp_clk>;
 			status = "disabled";
 		};
 
