FogBugz #510841: enable PREEMPT_RT_FULL config option
This config option is only available on a -rt kernel version. Enable this
option for the Stratix10 defconfig.

Signed-off-by: Dinh Nguyen <dinh.nguyen@intel.com>

--- a/arch/arm64/configs/s10_devkit_defconfig
+++ b/arch/arm64/configs/s10_devkit_defconfig
@@ -41,6 +41,7 @@ CONFIG_ARM64_VA_BITS_48=y
 CONFIG_SCHED_MC=y
 CONFIG_NUMA=y
 CONFIG_PREEMPT=y
+CONFIG_PREEMPT_RT_FULL=y
 CONFIG_KSM=y
 CONFIG_TRANSPARENT_HUGEPAGE=y
 CONFIG_CMA=y
